test/fail/mixins-system-nested.mo
import Nested "mixins/NestedSystem";

persistent actor {
  include Nested<system>(); // Fine
};
